Trying to fix funky alignment

--- a/Front End Code/Mitigations Repository Actual/view/css/ForkingStyle.css
+++ b/Front End Code/Mitigations Repository Actual/view/css/ForkingStyle.css
@@ -3,7 +3,7 @@
 .bodySearch input[type=text]
 {
 	padding: 6px;
-	margin-left: 550px;
+	/* margin-left: 550px; */
 	margin-top: 1px;
 	font-size: 20px;
 	border: 1px;
@@ -16,7 +16,7 @@
 .descriptionSearch input[type=text]
 {
 	padding: 6px;
-	margin-left: 550px;
+	/* margin-left: 550px; */
 	margin-top:1px;
 	height:100px;
 	width: 300px;
@@ -32,7 +32,7 @@
 .descriptionSearchTA textarea
 {
 	padding: 6px;
-	margin-left: 550px;
+	/* margin-left: 550px; */
 	margin-top: 1px;
 	font-size: 20px;
 	border: 1px;
